--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 
 @font-face {
  	font-family: "PT Sans";
-  	src: url("../PTSans.woff2") format("woff2"),
+  src: url("../PTSans.woff2") format("woff2"),
   		url("../PTSans.woff") format("woff");
-  	font-weight: 400; 
-  	font-style: normal;
+  font-weight: 400; 
+  font-style: normal;
 }
 
 @font-face {
-  	font-family: "PT Sans";
-  	src: url("../PTSans-Bold.woff2") format("woff2"),
+  font-family: "PT Sans";
+  src: url("../PTSans-Bold.woff2") format("woff2"),
   		url("../PTSans-Bold.woff") format("woff");
-  	font-weight: 700; 
+  font-weight: 700; 
  	font-style: normal;
 }
 
@@ -51,28 +51,52 @@
 
 /*Global*/
 
-body {
+.page {
+	height: 100%;
+}
+
+.page-body {
 	min-width: 1280px;
 	margin: 0;
 	padding: 0;
-  	font-family: "PTSans", "Arial", sans-serif;
-  	font-size: 14px;
-  	line-height: 21px;
-  	color: var(--basic-black);
-  	text-transform: uppercase;
-  	background-color: var(--basic-light-neutral);
+  font-family: "PTSans", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--basic-black);
+  text-transform: uppercase;
+  background-color: var(--basic-light-neutral);
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
-  	text-decoration: none;
+  text-decoration: none;
 }
 
 img {
  	max-width: 100%;
-  	height: auto;
+  height: auto;
+}
+
+/*Main Header*/
+
+.main-header {
+  width: 1200px;
+  margin: 0 auto;
 }
 
 /*Main Navigation*/
+
+.main-logo {
+  justify-self: center;
+}
+
+.site-nav {
+  margin: 0;
+  padding: 0;
+}
 
 .site-nav,
 .advantage-list,
@@ -83,6 +107,7 @@ img {
 .main-nav {
 	line-height: 26px;
 	font-weight: 700;
+	display: grid;
 	color: var(--basic-accent-black);
 	background-color: var(--basic-white);
 }
@@ -103,10 +128,24 @@ img {
 	color: var(--basic-dark);
 }
 
+/*Container*/
+
+.container {
+	width: 1200px;
+	margin: 0 auto;
+  padding: 0;
+}
+
 /*Main Image*/
 
 .main-img {
 	background-color: var(--special);
+}
+
+.main-img-welcome {	
+ 	position: absolute;
+ 	margin: auto;
+ 	top: 120px; left: 0; bottom: 0; right: 0; 	
 }
 
 /*Slogan*/ 
@@ -114,6 +153,7 @@ img {
 .slogan {
 	background-color: var(--basic-white);
 	text-align: center;
+  display: grid;
 }
 
 .slogan-title {
@@ -125,6 +165,7 @@ img {
 
 .slogan-text {
 	line-height: 26px;
+	padding-bottom: 50px;
 }
 
 /*Advantage*/
@@ -132,7 +173,27 @@ img {
 .advantage {
 	background-color: var(--basic-light);
 	color: var(--basic-white);
-	text-align: center;
+}
+
+.advantage-grid-1 {
+	display: grid;
+  grid-template-columns: 1fr 800px;
+  text-align: center;
+}
+
+.advantage-grid-2 {
+	display: grid;
+  grid-template-columns: 800px 1fr;
+  text-align: center;
+}
+
+.advantage-list {
+  margin: 0;
+  padding: 0;
+}
+
+.advantage-item {
+	padding-top: 50px;
 }
 
 .advantage-title {
@@ -150,6 +211,14 @@ img {
 	background-color: var(--basic-white);
 }
 
+/* Не понимаю, почему не вставляется иконка(
+.house::after {
+	background-image: url("../img/decoration/icon-house.png");
+	width:72px;
+	height: 75px;
+	background-position: center;
+}*/
+
 .features-title,
 .advantage-other-title {
 	font-size: 21px;
@@ -157,14 +226,48 @@ img {
 	color: var(--basic-accent-black);
 }
 
- .wrapper {
- 	text-align: center;
- }
+.features-list {
+	margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 
-/*Search*/
+.features-item {
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 80px;
+}
+
+ /*Advantage Other*/
+
+.advantage-list-other {
+	margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  list-style-type: none;
+}
+
+.advantage-item-other {
+	padding-top: 50px;
+	padding-bottom: 50px;
+
+}
+
+/*Search*/  /*Не смогла с помощью z-index наложить форму сверху карты*/
 
 .search {
-	background-color: var(--basic-white); 
+	background-color: var(--basic-white);
+	display: grid;
+	grid-template-rows: 290px 86px 1fr 594px; 
+}
+
+.search-wrapper {
+  text-align: center;
+  padding-top: 58px;
+  padding-bottom: 110px;
 }
 
 .search-lead {
@@ -178,6 +281,13 @@ img {
 	line-height: 24px;
 }
 
+.search-form-wrapper {
+  width: 460px;
+  height: 295px;
+	justify-self: center;
+	padding: 55px;
+}
+
 .button {
 	font-size: 21px;
 	text-transform: uppercase;
@@ -189,6 +299,9 @@ img {
 .button-modal {
 	color: var(--basic-white);
 	background-color: var(--basic-dark);
+	width: 568px;
+	height: 86px;
+	justify-self: center;
 }
 
 .button-modal:hover {
@@ -249,7 +362,7 @@ img {
 /*Map*/
 
 .map {
-	background-color: var(--special-active);
+	background-color: var(--special-active); 
 }
 
 /*Catalog*/
@@ -312,7 +425,7 @@ img {
 }
  
 .sort span:nth-child(2),
-.sort-list a {
+.sort-text {
 	font-size: 12px;
 	line-height: 18px;
 	color: var(--basic-accent-black);
@@ -322,27 +435,33 @@ img {
 	list-style: none;
 }
 
-.sort-list a {
-	opacity: 30%;
-	text-decoration: 1px underline;
-	text-decoration-color: var(--basic-light);
-	text-decoration-style: dashed;
+.sort-list button {
+	border: none;
+	text-transform: uppercase;
+	background-color: var(--basic-white);
 }
 
-.sort-list a:hover {
-	opacity: 100%;
-	color: var(--basic-light);
-} 
+.sort-text {
+	opacity: 30%;
+	text-decoration: underline;
+	text-decoration-style: dashed;
+	text-decoration-color: var(--basic-light);
+}
 
-.sort-list a:active,
-.sort-list a:focus {
+ .sort-text:hover {
+	color: var(--basic-light);
 	opacity: 100%;
+}
+
+ .sort-text:active {
 	color: var(--basic-accent-black);
 	text-decoration: none;
+	opacity: 100%;
 }
-/*  не смогла сделать, чтоб посещенная ссылка меняла цвет,
-тогда перестает работать a:activ; 
-.sort-list a:visited {
+
+/*  не смогла сделать, чтоб посещенная кнопка меняла цвет
+
+.sort-text:visited {
 	opacity: 100%;
 	color: var(--basic-light);
 	text-decoration: none;
@@ -425,12 +544,18 @@ img {
 .main-footer {
 	background-color: var(--basic-white);
 	color: var(--basic-accent-black);
+  width: 1200px;
+	margin: 0 auto;
+  padding: 0;
+  display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .footer-contacts {
 	font-size: 21px;
 	line-height: 26px;
 	font-weight: 700;
+	width: 250px;
 }
 
 .footer-phone a {
@@ -439,6 +564,8 @@ img {
 
 .footer-social {
 	text-align: center;
+	width: 150px;
+	justify-self: center;
 }
 
 .social-list {
@@ -448,6 +575,62 @@ img {
 .footer-copyright {
 	line-height: 26px;
 	color: var(--basic-accent-black);
+	max-width: 220px;
+	justify-self: end;
+}
+
+.social {
+	width: 46px;
+	height: 48px;
+  background-color: var(--basic-light);
+}
+
+.social-tw {
+	background-color: var(--basic-light);
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-tw:hover {
+	background-color: var(--basic-light-hover);
+}
+
+.social-tw:active {
+	background-color: var(--basic-light-active);
+	fill-opacity: 30%;
+}
+
+.social-fb {
+	background-color: var(--basic-light);
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-fb:hover {
+	background-color: var(--basic-light-hover);
+}
+
+.social-fb:active {
+	background-color: var(--basic-light-active);
+	fill-opacity: 30%;
+}
+
+.social-yout {
+	background-color: var(--basic-light);
+	display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-yout:hover {
+	background-color: var(--basic-light-hover);
+}
+
+.social-yout:active {
+	background-color: var(--basic-light-active);
+	fill-opacity: 30%;
 }
 
 
