--- a/css/style.css
+++ b/css/style.css
@@ -87,29 +87,58 @@ img {
   margin: 0 auto;
 }
 
-/*Main Navigation*/
-
 .main-logo {
-  justify-self: center;
+  align-self: center;
+  width: 400px;
+  text-align: center;
+  position: absolute;
 }
 
 .site-nav {
   margin: 0;
   padding: 0;
+  height: 56px;
 }
 
 .site-nav,
-.advantage-list,
 .features-list {
 	list-style: none;
+	display: flex;
+	justify-content: space-between;
 }
 
 .main-nav {
 	line-height: 26px;
 	font-weight: 700;
-	display: grid;
 	color: var(--basic-accent-black);
 	background-color: var(--basic-white);
+	display: flex;
+	flex-direction: column;
+}
+
+.site-nav-link {
+	width: 200px;
+	padding-top: 15px;
+	padding-right: 15px;
+}
+
+.site-nav-link:nth-child(1) {
+	padding-left: 72px;
+	text-align: left;
+}
+
+.site-nav-link:nth-child(2) {
+	text-align: left;
+
+}
+
+.site-nav-link:nth-child(3) {
+	text-align: right;
+}
+
+.site-nav-link:nth-child(4) {
+	text-align: right;
+	padding-right: 72px;
 }
 
 .site-nav a {
@@ -140,20 +169,28 @@ img {
 
 .main-img {
 	background-color: var(--special);
+	width: 1200px;
+	height: 509px;
 }
 
 .main-img-welcome {	
  	position: absolute;
  	margin: auto;
- 	top: 120px; left: 0; bottom: 0; right: 0; 	
+ 	top: -120px; left: 0; bottom: 0; right: 0; 	
 }
+
+.main-img-shape {
+	position: absolute;
+  margin: auto;
+ 	top: 120px; left: 0; bottom: -215px; right: 0; 
+}
+
 
 /*Slogan*/ 
 
 .slogan {
 	background-color: var(--basic-white);
 	text-align: center;
-  display: grid;
 }
 
 .slogan-title {
@@ -161,11 +198,14 @@ img {
 	line-height: 26px;
 	font-weight: 700;
 	color: var(--basic-accent-black);
+	margin: 0;
+	padding-top: 40px;
 }
 
 .slogan-text {
 	line-height: 26px;
 	padding-bottom: 50px;
+	margin: 0;
 }
 
 /*Advantage*/
@@ -173,27 +213,13 @@ img {
 .advantage {
 	background-color: var(--basic-light);
 	color: var(--basic-white);
+	display: flex;
+	text-align: center;
 }
 
-.advantage-grid-1 {
-	display: grid;
-  grid-template-columns: 1fr 800px;
-  text-align: center;
-}
-
-.advantage-grid-2 {
-	display: grid;
-  grid-template-columns: 800px 1fr;
-  text-align: center;
-}
-
-.advantage-list {
-  margin: 0;
-  padding: 0;
-}
-
-.advantage-item {
+.advantage-content {
 	padding-top: 50px;
+	width: 400px;
 }
 
 .advantage-title {
@@ -203,6 +229,8 @@ img {
 
 .advantage-img {
 	background-color: var(--special);
+	width: 800px;
+	height: 256px;
 }
 
 /*Features*/
@@ -211,13 +239,16 @@ img {
 	background-color: var(--basic-white);
 }
 
-/* Не понимаю, почему не вставляется иконка(
-.house::after {
+/*
+.house::before {
+	content: "";
+	position: absolute;
 	background-image: url("../img/decoration/icon-house.png");
 	width:72px;
 	height: 75px;
-	background-position: center;
-}*/
+
+}
+*/
 
 .features-title,
 .advantage-other-title {
@@ -261,7 +292,8 @@ img {
 .search {
 	background-color: var(--basic-white);
 	display: grid;
-	grid-template-rows: 290px 86px 1fr 594px; 
+	grid-template-rows: 290px 86px 1fr 594px;
+
 }
 
 .search-wrapper {
@@ -286,6 +318,11 @@ img {
   height: 295px;
 	justify-self: center;
 	padding: 55px;
+}
+
+.search-form {
+	
+
 }
 
 .button {
@@ -315,6 +352,8 @@ img {
 .button-search {
 	color: var(--basic-white);
 	background-color: var(--basic-light);
+	width: 458px;
+	height: 58px;
 }
 
 .button-search:hover {
@@ -330,6 +369,10 @@ img {
 	mix-blend-mode: normal;
 	opacity: 0.3;
 }
+.search-date-input {
+width: 346px;
+height: 38px;
+}
 
 .search-date,
 .quantity,
@@ -343,8 +386,14 @@ img {
 	background-color: var(--basic-light-neutral);
 }
 
+.search-date {
+	background-color: var(--basic-white);
+}
+
 .quantity-input {
 	text-align: center;
+	width: 114px;
+	height: 38px;
 }
 
 .search-date-input:hover,
@@ -363,10 +412,9 @@ img {
 
 .map {
 	background-color: var(--special-active); 
+	width: 1199px;
+	height: 594px;
 }
-
-
-
 
 /*Catalog*/
 
@@ -617,6 +665,7 @@ justify-self: end;
 	line-height: 26px;
 	font-weight: 700;
 	width: 250px;
+	
 }
 
 .footer-phone a {
@@ -625,12 +674,19 @@ justify-self: end;
 
 .footer-social {
 	text-align: center;
-	width: 150px;
+	width: 400px;
 	justify-self: center;
 }
 
 .social-list {
 	list-style: none;
+	display: flex;
+	justify-content: center;
+	margin: 36px 0;
+}
+
+.social-item {
+	margin-right: 6px;
 }
 
 .footer-copyright {
