--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ img {
   width: 400px;
   text-align: center;
   position: absolute;
+  z-index: 1;
 }
 
 .site-nav {
@@ -172,6 +173,7 @@ img {
 	background-color: var(--special);
 	width: 1200px;
 	height: 509px;
+	position: relative;
 }
 
 .main-img::before {
@@ -180,14 +182,15 @@ img {
 	position: absolute;
 	width: 1200px;
 	height: 57px;
-  margin: auto;
- 	top: 372px; left: 0; bottom: 0; right: 0;
+ 	bottom: -1px;
 }
 
 .main-img-welcome {	
+	width: 456px;
+	height: 350px;
  	position: absolute;
  	margin: auto;
- 	top: -85px; left: 0; bottom: 0; right: 0; 	
+ 	top: 0; left: 0; bottom: 0; right: 0; 	
 }
 
 /*Slogan*/ 
@@ -420,7 +423,7 @@ height: 38px;
 
 .page-catalog {
 	display: grid;
-  grid-template-rows: 217px 1fr;
+  grid-template-rows: auto 1fr;
 }
 
 .catalog-img {
@@ -428,21 +431,29 @@ height: 38px;
 	background-image: url("../img/background-catalog.jpg");
 	background-size: 1200px 217px;
   background-position: top center;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
+  background-repeat: repeat;
+ 	padding: 20px 70px;
+}
+
+/*Filters*/
+
+.filter-list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.filter-option {
+	padding-bottom: 23px;
 }
 
 .filter {
-	/*display: grid;
-	grid-template-columns: 1fr 1fr 1fr;*/
 	display: flex;
-	padding: 30px 70px;
-
 }
 
 .filters {
-	height: 217px;
+	margin: 0;
+	padding: 0;
 }
 
 .flex-infr {
@@ -454,15 +465,8 @@ height: 38px;
 }
 
 .flex-price {
-	outline-offset: -5px;
-	padding-left: 345px;
+	margin-left: auto;
 }
-
-.catalog {
-	background-color: var(--basic-white);
-}
-
-/*Filters*/
 
 .flex-infr fieldset,
 .flex-hause fieldset,
@@ -480,11 +484,9 @@ height: 38px;
 	font-size: 16px;
 	line-height: 21px;
 	font-weight: 700;
-	margin-bottom: 23px;
-}
-
-.filter ul {
-	list-style: none;
+	margin: 0;
+	padding: 0;
+	padding-bottom: 24px;
 }
 
  .filter-option label {
@@ -493,16 +495,37 @@ height: 38px;
 	font-weight: 400;
 }
 
-.filter-option {
-	margin-bottom: 23px;
+.filter-cost {
+	border: 2px solid var(--basic-white);
+	width: 317px;
+	
 }
+
  .filter-cost input {
  	background: transparent;
  	color: var(--basic-white);
  	text-transform: uppercase;
+ 	width: 129px;
+ 	margin: 0;
+ 	padding: 0;
+ 	border: none;
+}
+
+input[type="range"] {
+	width: 316px;
+	margin: 0;
+	padding: 0;
+	padding-top: 20px;
+}
+
+/*Центрирование кнопки*/
+.filter-button {
+	display: flex;
 }
 
 .filter-button button {
+	margin: 0 auto;
+	padding: 0;
 	background: transparent;
  	color: var(--basic-white);
  	text-transform: uppercase;
@@ -517,9 +540,13 @@ height: 38px;
 }
 
 /*Sort*/
+
+.catalog {
+	background-color: var(--basic-white);
+}
+
 .sort {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	display: flex;
   margin: 0;
   padding: 30px 70px;
 }
@@ -530,6 +557,7 @@ height: 38px;
 	line-height: 26px;
 	font-weight: 700;
 	color: var(--basic-accent-black);
+  padding-right: 30px;
 }
  
 .sort span:nth-child(2),
@@ -537,10 +565,28 @@ height: 38px;
 	font-size: 12px;
 	line-height: 18px;
 	color: var(--basic-accent-black);
+  padding-right: 30px;
 }
 
 .sort-list {
 	list-style: none;
+	display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.sort-item {
+  width: auto;
+}
+
+.sort-dir {
+	margin-left: auto;
+}
+
+.dir {
+	width:11px;
+	height: 10px;
+	
 }
 
 .sort-list button {
@@ -595,8 +641,40 @@ height: 38px;
 }
 
 .rating {
-justify-self: end;
+	justify-self: end;
+}
 
+.rating-text {
+	background-color: var(--basic-light-neutral);
+	color: var(--accent-extra-neutral);
+	padding: 3px 15px;
+}
+
+.raiting-star-two {
+	background-image: url("../img/decoration/icon-star.png");
+	background-repeat: repeat-x;
+	width: 35px;
+	height: 17px;
+	display: flex;
+	margin-left: auto;
+}
+
+.raiting-star-three {
+	background-image: url("../img/decoration/icon-star.png");
+	background-repeat: repeat-x;
+	width: 55px;
+	height: 17px;
+	display: flex;
+	margin-left: auto;
+}
+
+.raiting-star-four {
+	background-image: url("../img/decoration/icon-star.png");
+	background-repeat: repeat-x;
+	width: 75px;
+	height: 17px;
+	display: flex;
+	margin-left: auto;
 }
 
 .catalog-item {
@@ -663,11 +741,6 @@ justify-self: end;
 	opacity: 30%;
 }
 
-.rating-text {
-	background-color: var(--basic-light-neutral);
-	color: var(--accent-extra-neutral);
-	padding: 3px 15px;
-}
 
 /*Footer*/
 
@@ -703,10 +776,11 @@ justify-self: end;
 	list-style: none;
 	display: flex;
 	justify-content: center;
-	margin: 36px 0;
+	margin: 0;
+	padding: 36px 0;
 }
 
-.social-item {
+.social-item:not(:last-child) {
 	margin-right: 6px;
 }
 
