--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Fonts*/
 
-@font-face {
+/*@font-face {
  	font-family: "PT Sans";
   src: url("../PTSans.woff2") format("woff2"),
   		url("../PTSans.woff") format("woff");
@@ -14,14 +14,7 @@
   		url("../PTSans-Bold.woff") format("woff");
   font-weight: 700; 
  	font-style: normal;
-}
-
-/* Variables */  /*Старалась придумать названия, чтоб при смене цвета не пришлось
-менять само название и можно было присваивать цвета в любой части сайта.
-Но пара имен получилась с active, hover - в данном макете они действительно
-используются с таким назначением, но можно ли так называть? Или в будущем
-цвет такого значения попросят присвоить например заголовку, и тогда будет странно 
-смотреться имя такого кастомного свойства у заголовка?*/
+}*/
 
 :root {
 	--basic-accent-black: #000000;  /*чёрный подзаголовки*/
@@ -69,6 +62,7 @@
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
+  position: relative;
 }
 
 a {
@@ -80,32 +74,24 @@ img {
   height: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*Main Header*/
 
 .main-header {
   width: 1200px;
   margin: 0 auto;
-}
-
-.main-logo {
-  align-self: center;
-  width: 400px;
-  text-align: center;
-  position: absolute;
-  z-index: 1;
-}
-
-.site-nav {
-  margin: 0;
-  padding: 0;
-  height: 56px;
-}
-
-.site-nav,
-.features-list {
-	list-style: none;
-	display: flex;
-	justify-content: space-between;
 }
 
 .main-nav {
@@ -114,7 +100,30 @@ img {
 	color: var(--basic-accent-black);
 	background-color: var(--basic-white);
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
+}
+
+.main-logo {
+  align-self: center;
+  width: 138px;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+}
+
+.site-nav {
+  margin: 0;
+  padding: 0;
+  min-height: 56px;
+}
+
+.site-nav,
+.features-list {
+	list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .site-nav-link {
@@ -130,7 +139,6 @@ img {
 
 .site-nav-link:nth-child(2) {
 	text-align: left;
-
 }
 
 .site-nav-link:nth-child(3) {
@@ -245,20 +253,43 @@ img {
 .features {
 	background-color: var(--basic-white);
 }
+.features-item {
+	position: relative;
+}
 
-/*
-.house::before {
+.features-item h3 {
+	margin-top: 100px;
+}
+
+.features-item:nth-child(1)::before {
 	content: "";
 	position: absolute;
 	background-image: url("../img/decoration/icon-house.png");
-	width:72px;
-	height: 75px;
-
+	width:75px;
+	height: 72px;
+	margin-left: -40px;
 }
-*/
 
-.features-title,
-.advantage-other-title {
+.features-item:nth-child(2)::before {
+	content: "";
+	position: absolute;
+	background-image: url("../img/decoration/icon-food.png");
+	width:75px;
+	height: 70px;
+	margin-left: -40px;
+}
+
+.features-item:nth-child(3)::before {
+	content: "";
+	position: absolute;
+	background-image: url("../img/decoration/icon-gift.png");
+	width:64px;
+	height: 77px;
+	margin-left: -30px;
+}
+
+.features-item h3,
+.advantage-item-other h3 {
 	font-size: 21px;
 	font-weight: 700;
 	color: var(--basic-accent-black);
@@ -294,19 +325,24 @@ img {
 
 }
 
-/*Search*/  /*Не смогла с помощью z-index наложить форму сверху карты*/
-
 .search {
 	background-color: var(--basic-white);
 	display: grid;
-	grid-template-rows: 290px 86px 1fr 594px;
-
+	grid-template-rows: 290px 0 1fr 594px;
+	position: relative;
 }
 
 .search-wrapper {
   text-align: center;
-  padding-top: 58px;
+  padding-top: 38px;
   padding-bottom: 110px;
+}
+
+.form-wrapper {
+	background-color: var(--basic-white);
+	position: absolute;
+	top: 204px;
+	left: 320px;
 }
 
 .search-lead {
@@ -318,15 +354,81 @@ img {
 
 .search-info {
 	line-height: 24px;
+	margin-bottom: 24px;
+}
+
+.search-item {
+	margin-bottom: 30px;
+	position: relative;
+	display: flex;
+	align-items: baseline;
 }
 
 .search-form-wrapper {
   width: 460px;
   height: 295px;
-	justify-self: center;
 	padding: 55px;
 }
+.search-date-input[value] {
+	padding-left: 10px;
+}
 
+.search-form p:last-of-type {
+	justify-content: space-between;
+}
+
+.search-date {
+	min-width: 121px;
+}
+.calendar {
+	background-color: transparent;
+	border: none;
+	position: absolute;
+	right: 9px;
+	bottom: 8px;
+}
+
+.calendar:hover path,
+.plus:hover path,
+.minus:hover rect {
+	fill: var(--basic-accent-black);
+}
+
+.calendar:focus path,
+.plus:focus path,
+.minus:focus rect {
+	fill: var(--basic-light);
+}
+
+.minus {
+	background-color: transparent;
+	border: none;
+	position: absolute;
+	top: 10px;
+}
+
+.plus {
+	background-color: transparent;
+	border: none;
+	position: absolute;
+	top: 12px;
+}
+
+.adults-minus {
+	left: 125px;
+}
+
+.adults-plus {
+	left: 200px;
+}
+
+.child-minus {
+	right: 80px;
+}
+
+.child-plus {
+	right: 5px; 
+}
 
 .button {
 	font-size: 21px;
@@ -357,6 +459,7 @@ img {
 	background-color: var(--basic-light);
 	width: 458px;
 	height: 58px;
+	margin-top: 20px;
 }
 
 .button-search:hover {
@@ -389,7 +492,7 @@ height: 38px;
 	background-color: var(--basic-light-neutral);
 }
 
-.search-date {
+.search-date, .quantity {
 	background-color: var(--basic-white);
 }
 
@@ -398,6 +501,7 @@ height: 38px;
 	width: 114px;
 	height: 38px;
 }
+
 
 .search-date-input:hover,
 .quantity-input:hover {
@@ -429,7 +533,7 @@ height: 38px;
 .catalog-img {
 	background-color: var(--special-active);
 	background-image: url("../img/background-catalog.jpg");
-	background-size: 1200px 217px;
+	background-size: cover;
   background-position: top center;
   background-repeat: repeat;
  	padding: 20px 70px;
@@ -752,6 +856,11 @@ input[type="range"] {
   padding: 0;
   display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	position: absolute;
+	margin: auto;
+ 	bottom: 0;
+ 	left: 0;
+ 	right: 0;	
 }
 
 .footer-contacts {
@@ -759,7 +868,7 @@ input[type="range"] {
 	line-height: 26px;
 	font-weight: 700;
 	width: 250px;
-	
+	padding-left: 72px;
 }
 
 .footer-phone a {
@@ -789,6 +898,7 @@ input[type="range"] {
 	color: var(--basic-accent-black);
 	max-width: 220px;
 	justify-self: end;
+	padding-right: 72px;
 }
 
 .social {
@@ -845,6 +955,13 @@ input[type="range"] {
 	fill-opacity: 30%;
 }
 
+.link-copy:hover path {
+	fill: var(--basic-light);
+}
+
+.link-copy:focus path {
+	fill: var(--special-active);
+}
 
 
 
