--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Fonts*/
 
-/*@font-face {
+@font-face {
  	font-family: "PT Sans";
   src: url("../PTSans.woff2") format("woff2"),
   		url("../PTSans.woff") format("woff");
@@ -14,7 +14,7 @@
   		url("../PTSans-Bold.woff") format("woff");
   font-weight: 700; 
  	font-style: normal;
-}*/
+}
 
 :root {
 	--basic-accent-black: #000000;  /*чёрный подзаголовки*/
@@ -92,7 +92,7 @@ img {
 .main-header {
   width: 1200px;
   margin: 0 auto;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
 }
 
 .main-nav {
@@ -173,7 +173,7 @@ img {
 	width: 1200px;
 	margin: 0 auto;
   padding: 0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
 }
 
 /*Main Image*/
@@ -592,52 +592,6 @@ height: 38px;
   margin-left: auto;
 }
 
-.range-controls {
-	 height: 20px;
-	 margin: 20px 0;
-	 width: 316px;
-	 padding-top: 20px;
-	 position: relative;
-}
-
-.range-controls .scale {
-  height: 2px;
-  background: var(--basic-white);
-}
-
-.range-controls .bar {
-	width: 20%;
-  height: 2px;
- 	background: var(--basic-white); /*С любым другим цветом прозрачность срабатывает*/
- 	opacity: 30%;
- 	position: absolute;
- 	right: 0;
-}
-
-.range-controls .toggle {
-  background-image: url("../img/decoration/icon-toggle.svg");
-  width: 19px;
-  height: 21px;
-  position: absolute;
-  left: 0;
-  top: 10px;
-  cursor: pointer;
-}
-
-.range-controls .toggle:hover {
-	background-size: 23px 24px;
-  width: 23px;
-  height: 24px;
-}
-
-.range-controls .toggle-min {
-  
-}
-
-.range-controls .toggle-max {
-  left: 248px;
-}
-
 .filter {
 	color: var(--basic-white);
 }
@@ -681,7 +635,7 @@ height: 38px;
 }
 
 .filter-checkbox:disabled + label::before {
-		content: "";
+	content: "";
 	position: absolute;
 	background-image: url("../img/decoration/icon-checkbox-off-disabled.svg");
 	width: 23px;
@@ -689,7 +643,7 @@ height: 38px;
 }
 
 .filter-checkbox:checked:disabled + label::before {
-		content: "";
+	content: "";
 	position: absolute;
 	background-image: url("../img/decoration/icon-checkbox-on-disabled.svg");
 	width: 27px;
@@ -699,22 +653,86 @@ height: 38px;
 .filter-cost {
 	border: 2px solid var(--basic-white);
 	width: 317px;
+	position: relative;
+	height: 36px;
+}
+
+.filter-cost::after {
+	content: "";
+  position: absolute;
+  width: 2px;
+  height: 22px;
+  background-color: var(--basic-white);
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  bottom: 7px;
 }
 
  .filter-cost input {
  	background: transparent;
  	color: var(--basic-white);
  	text-transform: uppercase;
- 	width: 129px;
+ 	width: 70px;
  	margin: 0;
  	padding: 0;
  	border: none;
+ 	padding-top: 8px;
 }
 
+.filter-cost label {
+	padding-left: 60px;
+}
+
+.range-controls {
+	 height: 20px;
+	 padding-top: 20px;
+	 width: 316px;
+	 padding-top: 20px;
+	 position: relative;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: var(--basic-white);
+}
+
+.range-controls .bar {
+	width: 20%;
+  height: 2px;
+ 	background: var(--basic-white); /*С любым другим цветом прозрачность срабатывает*/
+ 	opacity: 30%;
+ 	position: absolute;
+ 	right: 0;
+}
+
+.range-controls .toggle {
+  background-image: url("../img/decoration/icon-toggle.svg");
+  background-repeat: no-repeat;
+  width: 19px;
+  height: 21px;
+  position: absolute;
+  left: 0;
+  top: 10px;
+  cursor: pointer;
+}
+
+.range-controls .toggle:hover {
+	background-image: url("../img/decoration/icon-toggle-hover.svg");
+	background-repeat: no-repeat;
+  width: 23px;
+  height: 24px;
+}
+
+.range-controls .toggle-max {
+  left: 248px;
+}
 
 /*Центрирование кнопки*/
 .filter-button {
 	display: flex;
+	padding-top: 10px;
 }
 
 .filter-button button {
@@ -862,10 +880,19 @@ height: 38px;
 	padding: 3px 15px;
 }
 
+.raiting-star-one {
+	background-image: url("../img/decoration/icon-star.png");
+	background-repeat: repeat-x;
+	max-width: 18px;
+	height: 17px;
+	display: flex;
+	margin-left: auto;
+}
+
 .raiting-star-two {
 	background-image: url("../img/decoration/icon-star.png");
 	background-repeat: repeat-x;
-	width: 35px;
+	max-width: 35px;
 	height: 17px;
 	display: flex;
 	margin-left: auto;
@@ -874,7 +901,7 @@ height: 38px;
 .raiting-star-three {
 	background-image: url("../img/decoration/icon-star.png");
 	background-repeat: repeat-x;
-	width: 55px;
+	max-width: 55px;
 	height: 17px;
 	display: flex;
 	margin-left: auto;
@@ -883,7 +910,16 @@ height: 38px;
 .raiting-star-four {
 	background-image: url("../img/decoration/icon-star.png");
 	background-repeat: repeat-x;
-	width: 75px;
+	max-width: 75px;
+	height: 17px;
+	display: flex;
+	margin-left: auto;
+}
+
+.raiting-star-five {
+	background-image: url("../img/decoration/icon-star.png");
+	background-repeat: repeat-x;
+	max-width: 95px;
 	height: 17px;
 	display: flex;
 	margin-left: auto;
