--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ img {
 
 .advantage-content {
 	padding-top: 25px;
+	padding-bottom: 25px;
 	width: 400px;
 }
 
@@ -373,7 +374,6 @@ img {
 	top: 204px;
 	left: 316px;
 	width: 568px;
-	height: 481px;
 }
 
 .search-lead {
@@ -401,7 +401,6 @@ img {
 
 .search-form-wrapper {
   width: 460px;
-  height: 295px;
 	padding: 55px;
 }
 
@@ -423,6 +422,7 @@ img {
 	bottom: 0;
 	height: 100%;
 	width: 38px;
+	cursor: pointer;
 }
 
 .calendar:hover path,
@@ -448,6 +448,7 @@ img {
 	position: absolute;
 	height: 100%;
 	width: 38px;
+	cursor: pointer;
 }
 
 .plus {
@@ -456,6 +457,7 @@ img {
 	position: absolute;
 	height: 100%;
 	width: 38px;
+	cursor: pointer;
 }
 
 .adults-minus,
@@ -476,6 +478,7 @@ img {
 	line-height: 26px;
 	border: none;
 	font-weight: 700;
+	cursor: pointer;
 }
 
 .button-modal {
@@ -670,6 +673,10 @@ height: 38px;
 	align-items: baseline;
 }
 
+.filter-option input:focus {
+	outline: 2px dotted black;
+}
+
 .filter-checkbox + label::before {
 	content: "";
 	position: absolute;
@@ -736,6 +743,14 @@ height: 38px;
  	padding-top: 8px;
 }
 
+.filter-cost input::placeholder {
+	color: var(--basic-white);
+}
+
+.filter-cost input::-moz-placeholder {
+	color: var(--basic-white);
+}
+
 .filter-cost label:first-of-type {
 	padding-left: 66px;
 }
@@ -765,7 +780,6 @@ height: 38px;
  	opacity: 30%;
  	position: absolute;
  	right: 0;
-
 }
 
 .range-controls .toggle {
@@ -780,10 +794,7 @@ height: 38px;
 }
 
 .range-controls .toggle:hover {
-	background-image: url("../img/decoration/icon-toggle-hover.svg");
-	background-repeat: no-repeat;
-  width: 23px;
-  height: 24px;
+	transform: scale(1.2);
 }
 
 .range-controls .toggle-max {
@@ -906,7 +917,12 @@ height: 38px;
 	text-decoration: none;
 }
 
-.sort-text-current {
+ .sort-text:active {
+	color: var(--basic-accent-black);
+	text-decoration: none;
+}
+
+.sort-text:disabled {
 	text-decoration: none;
 	color: var(--basic-light);
 }
@@ -1227,6 +1243,11 @@ height: 38px;
 	fill: var(--special-active);
 }
 
+/*Blank*/
 
+.title-blank {
+	text-align: center;
+	padding-top: 100px;
+}
 
 
